Hack to have work with yum

--- a/ansible_test/resources/Dockerfile.j2
+++ b/ansible_test/resources/Dockerfile.j2
@@ -2,13 +2,17 @@ FROM {{ image }}
 
 MAINTAINER Rob McQueen
 
-# Install Python
+# Install Python on Ubuntu
 RUN apt-get update && apt-get install -y \
   build-essential \
   python-dev \
   python-virtualenv \
   sudo \
   libffi-dev
+
+# Install Python on Centos
+RUN yum install python-pip
+RUN pip install virtualenv
 
 # Install Ansible
 RUN mkdir /opt/ansible && virtualenv /opt/ansible/venv && \
