--- a/ansible_test/resources/Dockerfile.j2
+++ b/ansible_test/resources/Dockerfile.j2
@@ -11,10 +11,10 @@ MAINTAINER Rob McQueen
 #  libffi-dev
 
 # Install Python on Centos
-RUN yum install wget
+RUN yum install -y wget
 RUN wget http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-8.noarch.rpm
 RUN rpm -ivh epel-release-7-8.noarch.rpm
-RUN yum install python-pip
+RUN yum install -y python-pip
 RUN pip install virtualenv
 
 # Install Ansible
