--- a/ansible_test/resources/Dockerfile.j2
+++ b/ansible_test/resources/Dockerfile.j2
@@ -15,6 +15,7 @@ RUN yum install -y wget
 RUN wget http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-8.noarch.rpm
 RUN rpm -ivh epel-release-7-8.noarch.rpm
 RUN yum install -y python-pip
+RUN pip install --upgrade pip
 RUN pip install virtualenv
 
 # Install Ansible
